fixed keyboard issue on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,3 +233,6 @@ i {
 th {
     text-align: center;
 }
+#screenNameForm {
+  padding-bottom: 30%;
+}
